--- a/vehicle/src/main/resources/static/index.html
+++ b/vehicle/src/main/resources/static/index.html
@@ -12,8 +12,8 @@
 <title>Vehicle Parking System</title>
 <meta name="description" content="">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="/css/app.css">
-<link href="/css/default.css" rel="stylesheet" type="text/css" />
+<link rel="stylesheet" href="css/app.css">
+<link href="css/default.css" rel="stylesheet" type="text/css" />
 </head>
 <body ng-controller="usersController">
 	<h1 style="color:red;"><center>Vehicle Parking System</center></h1>
@@ -25,24 +25,24 @@
 	</div>
 </br>
 </br>
-	<div ng-view ></div>
-	<script src="/webjars/angularjs/1.4.9/angular.js"></script>
-	<script src="/webjars/angularjs/1.4.9/angular-resource.js"></script>
-	<script src="/webjars/angularjs/1.4.9/angular-route.js"></script>
-	<script src="/js/app.js"></script>
-	<script src="/js/controller.js"></script>
-	<script src="/js/service.js"></script>
-	<link rel="stylesheet" href="/js/angularjs-datetime-picker.css" />
-	<script src="/js/angularjs-datetime-picker.js"></script>
-	<script src="/js/angularjs-datetime-picker.min.js"></script>
+	<div ng-view></div>
+	<script src="webjars/angularjs/1.4.9/angular.js"></script>
+	<script src="webjars/angularjs/1.4.9/angular-resource.js"></script>
+	<script src="webjars/angularjs/1.4.9/angular-route.js"></script>
+	<script src="js/app.js"></script>
+	<script src="js/controller.js"></script>
+	<script src="js/service.js"></script>
+	<link rel="stylesheet" href="js/angularjs-datetime-picker.css" />
+	<script src="js/angularjs-datetime-picker.js"></script>
+	<script src="js/angularjs-datetime-picker.min.js"></script>
 
 	<link rel="stylesheet"
-		href="/webjars/bootstrap/3.3.6/css/bootstrap.css" />
-	<link href="/css/default.css" rel="stylesheet" type="text/css" />
+		href="webjars/bootstrap/3.3.6/css/bootstrap.css" />
+	<link href="css/default.css" rel="stylesheet" type="text/css" />
 	<div>
 		<MARQUEE direction="top" behavior="scroll">
-			<img alt="" src="/images/3.jpg"> <img alt=""
-				src="/images/5.jpg">
+			<img alt="" src="images/3.jpg"> <img alt=""
+				src="images/5.jpg">
 		</MARQUEE>
 	</div>
 
