--- a/vehicle/static/index.html
+++ b/vehicle/static/index.html
@@ -1,32 +1,9 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html lang="en" ng-app="app" class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html lang="en" ng-app="app" class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html lang="en" ng-app="app" class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!-->
+
 <html lang="en" ng-app="app" class="no-js">
 <!--<![endif]-->
 <head>
-
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>Vehicle Parking System</title>
-<meta name="description" content="">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="/css/app.css">
-<link href="/css/default.css" rel="stylesheet" type="text/css" />
-</head>
-<body ng-controller="usersController">
-	<h1 style="color:red;"><center>Vehicle Parking System</center></h1>
-	<div class="home-section">
-		<ul class="menu-list">
-			<li><a href="#/vehicle" style="color:blue;">Exit</a></li>
-			<li><a href="#/capacity" style="color:blue;">Capacity</a></li>
-		</ul>
-	</div>
-</br>
-</br>
-	<div ng-view ></div>
-	<script src="/webjars/angularjs/1.4.9/angular.js"></script>
+<script src="/webjars/angularjs/1.4.9/angular.js"></script>
 	<script src="/webjars/angularjs/1.4.9/angular-resource.js"></script>
 	<script src="/webjars/angularjs/1.4.9/angular-route.js"></script>
 	<script src="/js/app.js"></script>
@@ -38,13 +15,75 @@
 
 	<link rel="stylesheet"
 		href="/webjars/bootstrap/3.3.6/css/bootstrap.css" />
-	<link href="/css/default.css" rel="stylesheet" type="text/css" />
-	<div>
-		<MARQUEE direction="top" behavior="scroll">
-			<img alt="" src="/images/3.jpg"> <img alt=""
-				src="/images/5.jpg">
-		</MARQUEE>
-	</div>
+	<!-- <link href="/css/default.css" rel="stylesheet" type="text/css" /> -->
 
-</body>
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+<meta name="description" content="">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="/css/app.css">
+ <!-- <link href="/css/default.css" rel="stylesheet" type="text/css" /> -->
+</head>
+<body ng-controller="usersController" style="background-image: url(/images/main.jpg); background-repeat: no-repeat; background-size: 1900px 1260px">
+
+<div class="header">
+	<h1 style="color:black;">
+	<center><strong>Vehicle Parking System</strong></center>
+	</h1></div>
+	<br>
+	<br>
+ <br>
+	<br>
+	<br>
+	<br> <br>
+	
+	<div class="left-side">
+		<ul class="menu-list">
+			<li><a href="#/vehicle" style="color:white;"><i><font size="6" style="font-family:verdana;">Exit</font></i></a></li>
+			<li><a href="#/capacity" style="color:white;"><i><font size="6"style="font-family:verdana;">Capacity</font></i></a></li>
+		</ul>
+		</div>
+	</br>
+	</br>
+	<br>
+	<br />
+	<br />
+	
+	<center><div ng-view> </div>
+	</center>
+	<br>
+	<br><br>
+	<br>
+	<br>
+	<br><br>
+	<br>
+	<br>
+	<br><br>
+	<br>
+	<br>
+	<br><br>
+	<br>
+	<br>
+	
+	
+	
+	
+	
+
+
+</body> 
+	<div class="footer">
+	<b><center><h4><b>copyrights@vehicleparkingsystem</b></h4></center></b>
+	</div>
+	<br><br>
+	 <div>
+		 <MARQUEE direction="top"><i><font-color:"black"></font><h2><img alt="" src="/images/3.jpg"/>Our parking lot presents you the best services with low cost and best services<img alt="" src="/images/5.jpg"/></h2></i>
+			
+				
+		</MARQUEE> 
+		
+		
+	</div> 
+	</div>
 </html>
