Modified the UI

--- a/vehicle/src/main/resources/static/index.html
+++ b/vehicle/src/main/resources/static/index.html
@@ -3,27 +3,27 @@
 <html lang="en" ng-app="app" class="no-js">
 <!--<![endif]-->
 <head>
-<script src="/webjars/angularjs/1.4.9/angular.js"></script>
-	<script src="/webjars/angularjs/1.4.9/angular-resource.js"></script>
-	<script src="/webjars/angularjs/1.4.9/angular-route.js"></script>
-	<script src="/js/app.js"></script>
-	<script src="/js/controller.js"></script>
-	<script src="/js/service.js"></script>
-	<link rel="stylesheet" href="/js/angularjs-datetime-picker.css" />
-	<script src="/js/angularjs-datetime-picker.js"></script>
-	<script src="/js/angularjs-datetime-picker.min.js"></script>
+<script src="webjars/angularjs/1.4.9/angular.js"></script>
+	<script src="webjars/angularjs/1.4.9/angular-resource.js"></script>
+	<script src="webjars/angularjs/1.4.9/angular-route.js"></script>
+	<script src="js/app.js"></script>
+	<script src="js/controller.js"></script>
+	<script src="js/service.js"></script>
+	<link rel="stylesheet" href="js/angularjs-datetime-picker.css" />
+	<script src="js/angularjs-datetime-picker.js"></script>
+	<script src="js/angularjs-datetime-picker.min.js"></script>
 
 	<link rel="stylesheet"
-		href="/webjars/bootstrap/3.3.6/css/bootstrap.css" />
-	<!-- <link href="/css/default.css" rel="stylesheet" type="text/css" /> -->
+		href="webjars/bootstrap/3.3.6/css/bootstrap.css" />
+	<!-- <link href="css/default.css" rel="stylesheet" type="text/css" /> -->
 
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
 <meta name="description" content="">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="/css/app.css">
- <!-- <link href="/css/default.css" rel="stylesheet" type="text/css" /> -->
+<link rel="stylesheet" href="css/app.css">
+ <!-- <link href="css/default.css" rel="stylesheet" type="text/css" /> -->
 </head>
 <body ng-controller="usersController" style="background-image: url(/images/main.jpg); background-repeat: no-repeat; background-size: 1900px 1260px">
 
@@ -78,7 +78,7 @@
 	</div>
 	<br><br>
 	 <div>
-		 <MARQUEE direction="top"><i><font-color:"black"></font><h2><img alt="" src="/images/3.jpg"/>Our parking lot presents you the best services with low cost and best services<img alt="" src="/images/5.jpg"/></h2></i>
+		 <MARQUEE direction="top"><i><font-color:"black"></font><h2><img alt="" src="images/3.jpg"/>Our parking lot presents you the best services with low cost and best services<img alt="" src="images/5.jpg"/></h2></i>
 			
 				
 		</MARQUEE> 
