--- a/vehicle/static/index.html
+++ b/vehicle/static/index.html
@@ -25,7 +25,7 @@
 <link rel="stylesheet" href="css/app.css">
  <!-- <link href="css/default.css" rel="stylesheet" type="text/css" /> -->
 </head>
-<body ng-controller="usersController" style="background-image: url(/images/main.jpg); background-repeat: no-repeat; background-size: 1900px 1260px">
+<body ng-controller="usersController" style="background-image: url(images/main.jpg); background-repeat: no-repeat; background-size: 1900px 1260px">
 
 <div class="header">
 	<h1 style="color:black;">
